apps/test/microreact/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microreact
  namespace: sofi
spec:
  ingressClassName: traefik
  rules:
    - host: microreact-test.sofi-platform.dk
      http:
        paths:
          - backend:
              service:
                name: microreact
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - test2.sofi-platform.dk
      secretName: test2.sofi-platform.dk-tls
